<resources>
    <string name="app_name">AgendaFirebase</string>
    <string name="favorito">Marcar Favorito</string>
    <string name="tel1">Teléfono *</string>
    <string name="tel2">Teléfono Secundario</string>
    <string name="btn_limpiar">Limpiar</string>
    <string name="btn_listar">Mostrar Lista</string>
    <string name="btn_guardar">Guardar</string>
    <string name="notas">Notas</string>
    <string name="direccion">Dirección *</string>
    <string name="nombre">Nombre *</string>
    <string name="nuevo">Nuevo</string>
    <string name="texto">Elementos de la Agenda</string>
    <string name="mensaje">¡Contacto guardado!</string>
    <string name="mensajeerror">Los campos marcados con (*) son obligatorios</string>
    <string name="mensajeedit">¡Contacto actualizado!</string>
</resources>