<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/tabla1"
        android:stretchColumns="*"
        tools:context="${relativePackage}.${activityClass}">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_span="2"
            android:text="@string/nombre">
        </TextView>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txtNombre"
            android:layout_span="2"
            android:inputType="textPersonName">
            <requestFocus></requestFocus>
        </EditText>
        <TableRow>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tel1">
            </TextView>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tel2">
            </TextView>
        </TableRow>
        <TableRow>
            <EditText
                android:layout_width="144dp"
                android:layout_height="wrap_content"
                android:id="@+id/txtTelefono1"
                android:ems="10"
                android:inputType="phone">
            </EditText>
            <EditText
                android:layout_width="144dp"
                android:layout_height="wrap_content"
                android:id="@+id/txtTelefono2"
                android:ems="10"
                android:inputType="phone">
            </EditText>
        </TableRow>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_span="2"
            android:text="@string/direccion">
        </TextView>
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txtDireccion"
            android:ems="10"
            android:inputType="textPostalAddress">
        </EditText>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_span="2"
            android:text="@string/notas">
        </TextView>
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.97"
            android:id="@+id/txtNotas"
            android:ems="10"
            android:inputType="textMultiLine">
        </EditText>
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/cbxFavorito"
            android:text="@string/favorito">
        </CheckBox>
        <TableRow>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btnLimpiar"
                android:text="@string/btn_limpiar"
                android:layout_marginRight="2.5dp">
            </Button>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btnGuardar"
                android:text="@string/btn_guardar"
                android:layout_marginLeft="2.5dp">
            </Button>
        </TableRow>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnListar"
            android:text="@string/btn_listar">
        </Button>
    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>